   * Added analysed data to the S4 object to allow postestimation analysis
   * All interaction/dummy variables are now generated prior to calling MLwiN when using the newer syntax
   * Implemented new syntax for specifying cross-classified/multiple membership/CAR models
   * Updated included demos to use the newer formula syntax
   * Added CITATION file into package

Tue Jul 15 2014
1. Changes
   * Replace 0s, 0c,... by 0|, 0||,..., respectively.
   * Be able to specify the level name (e.g. school|cons + standlrt) instead of just the level number (e.g. 2|cons + standlrt)
   * Omit 0| for all the cases except for that both 0| and 0|| exists in the formula.
   * Allow attached data to be picked up when running a model
   * Automatically convert logical/factor variables used as the response for Binomial models
   * Cross-classified notation is now used in the equation by default for cross-classified models

Mon Jun 30 2014
1. Bug fixing
   * Return full covariance matrices in FP.cov and RP.cov
   * Fix level numbers in residual names for Multivariate/Multinomial models
   * Allow single-level binomial/Poisson/negative binomial models to be fitted
   * Fix output when Std. Err. is zero (for example if a parameter is collinear)
   * Fix reported number of observations and observations in use
   * If RIGLS is specified as the estimation method correctly reflect this in the model output
   * Don't calculate starting residuals for cross-classified models
   * BUGS output should now make use of prior specification for non-cross-classified models
   * Added check that a denominator has been specified for Binomial models
   * Added check that no variables are made random at level-one in discrete response models
   * Added check that response variables for multinomial models have at least two categories
   * Added check that the reference category is valid for multinomial models
   * Added check that the levels for hierarchical centring and parameter expansion are valid