@@ -15,7 +15,8 @@ Depends:
     coda (>= 0.16-1),
     foreign (>= 0.8-46),
     rbugs (>= 0.5-7),
-    digest
+    digest,
+    Matrix
 Suggests:
     doBy,
     car,
