@@ -6,6 +6,6 @@ importFrom("digest", digest)
 importFrom("methods", show)
 importFrom("stats4", coef, logLik, summary, vcov, update)
 importFrom("stats", formula)
-export(caterpillar, caterpillarR, double2singlePrecision, Formula.translate, MacroScript1, MacroScript2, mlwin2bugs, predLines, predCurves, prior2macro, runMLwiN, sixway, trajectories, Untoggle, ws2foreign)
+export(caterpillar, caterpillarR, double2singlePrecision, Formula.translate, MacroScript1, MacroScript2, mlwin2bugs, predLines, predCurves, prior2macro, runMLwiN, sixway, trajectories, Untoggle, ws2foreign, df2matrix, matrix2df)
 exportClasses(mlwinfitIGLS, mlwinfitMCMC)
 exportMethods("[","[[","[<-","[[<-",summary, print, update, formula, coef, coefficients, vcov, df.residual, residuals, resid, fitted, fitted.values, predict, logLik, deviance, nobs)
